# fluidr

./: Cargo.toml
.cargo/: config.toml
old_shit/resource/: cubic_interpolation_polynomial_1.gcx  cubic_interpolation_polynomial_2_bridson.gcx
old_shit/resource/assets/images/: lena2.pgm  simple.pgm  simple_processed.pgm
old_shit/resource/assets/shaders/common/: circle_movable.frag  dots.geom  image.frag  passthr.frag  passthr.vert  point_sprite.vert  texture_utils.glsl  vector_field.frag
old_shit/resource/assets/shaders/fluid/: advection.frag  divergence.frag  gradient_substraction.frag  pressure_solver.frag
old_shit/resource/assets/shaders/tmp/: background.frag  background.vert  base.vert  buffer_a.glsl  buffer_b.glsl  buffer_c.frag  image.frag  image.glsl  particles.frag  particles.vert  render_ch0.glsl  simple_color.glsl  test.vert  test1.frag  test2.frag  transform.vert
old_shit/src/: CMA.h  CMakeLists.txt  MACGrid.hpp  bnas.h  field2d.hpp  field2d_v2.hpp  gfx.h  macros.hpp  main_cinder.cpp  math.hpp  solver.hpp  solver_v2.hpp
old_shit/test/: Base.hh  CMakeLists.txt  test_all_solver_performance.cpp  test_dummy.cpp  test_eigen_matrix.cpp  test_field2d.cpp  test_field2d_v2.cpp  test_flip_reference.cpp  test_gfx.cpp  test_integration.cpp  test_interpolation.cpp  test_mac_grid.cpp  test_modular_solver.cpp  test_solver.cpp  test_solver_v2.cpp  test_vector_translation.cpp
src/: bnas.rs  main.rs  math.rs  solver.rs
